@@ -271,7 +271,7 @@ if [ -z "$JVM_MEM_OPTS" ]; then
    java_version=$("$JAVACMD" -version 2>&1 | awk -F '"' '/version/ {print $2}')
    JVM_MEM_OPTS="-Xms256m -Xmx1024m"
    if [ "$java_version" \< "1.8" ]; then
-      JVM_MEM_OPTS="$JVM_MEM_OPTS -XX:MaxPermSize=256m"
+      JVM_MEM_OPTS="$JVM_MEM_OPTS"
    fi
 fi
 echo "Using Java memory options: $JVM_MEM_OPTS"
